--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,14 +1,14 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="b36d9e">  <td>24/02/21 17:02:18</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.runScenario(io.cucumber.testng.PickleWrapper,io.cucumber.testng.FeatureWrapper)[pri:0, instance:com.IdentifyNewBikes.testRunner.testRun@563f38c4]">runScenario</td> 
-  <td>main@26540753</td>   <td></td> </tr>
-<tr bgcolor="b36d9e">  <td>24/02/21 17:02:18</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.runScenario(io.cucumber.testng.PickleWrapper,io.cucumber.testng.FeatureWrapper)[pri:0, instance:com.IdentifyNewBikes.testRunner.testRun@563f38c4]">runScenario</td> 
-  <td>main@26540753</td>   <td></td> </tr>
-<tr bgcolor="b36d9e">  <td>24/02/21 17:02:18</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.runScenario(io.cucumber.testng.PickleWrapper,io.cucumber.testng.FeatureWrapper)[pri:0, instance:com.IdentifyNewBikes.testRunner.testRun@563f38c4]">runScenario</td> 
-  <td>main@26540753</td>   <td></td> </tr>
-<tr bgcolor="b36d9e">  <td>24/02/21 16:54:26</td>   <td>-471779</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AbstractTestNGCucumberTests.setUpClass(org.testng.ITestContext)[pri:0, instance:com.IdentifyNewBikes.testRunner.testRun@563f38c4]">&gt;&gt;setUpClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@26540753</td>   <td></td> </tr>
-<tr bgcolor="b36d9e">  <td>24/02/21 17:02:30</td>   <td>12192</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AbstractTestNGCucumberTests.tearDownClass()[pri:0, instance:com.IdentifyNewBikes.testRunner.testRun@563f38c4]">&lt;&lt;tearDownClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@26540753</td>   <td></td> </tr>
+<tr bgcolor="f176b8">  <td>24/02/21 22:58:27</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.runScenario(io.cucumber.testng.PickleWrapper,io.cucumber.testng.FeatureWrapper)[pri:0, instance:com.IdentifyNewBikes.testRunner.testRun@5b1669c0]">runScenario</td> 
+  <td>main@987249254</td>   <td></td> </tr>
+<tr bgcolor="f176b8">  <td>24/02/21 22:58:27</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.runScenario(io.cucumber.testng.PickleWrapper,io.cucumber.testng.FeatureWrapper)[pri:0, instance:com.IdentifyNewBikes.testRunner.testRun@5b1669c0]">runScenario</td> 
+  <td>main@987249254</td>   <td></td> </tr>
+<tr bgcolor="f176b8">  <td>24/02/21 22:58:27</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.runScenario(io.cucumber.testng.PickleWrapper,io.cucumber.testng.FeatureWrapper)[pri:0, instance:com.IdentifyNewBikes.testRunner.testRun@5b1669c0]">runScenario</td> 
+  <td>main@987249254</td>   <td></td> </tr>
+<tr bgcolor="f176b8">  <td>24/02/21 22:47:56</td>   <td>-631483</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AbstractTestNGCucumberTests.setUpClass(org.testng.ITestContext)[pri:0, instance:com.IdentifyNewBikes.testRunner.testRun@5b1669c0]">&gt;&gt;setUpClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@987249254</td>   <td></td> </tr>
+<tr bgcolor="f176b8">  <td>24/02/21 22:58:46</td>   <td>18276</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AbstractTestNGCucumberTests.tearDownClass()[pri:0, instance:com.IdentifyNewBikes.testRunner.testRun@5b1669c0]">&lt;&lt;tearDownClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@987249254</td>   <td></td> </tr>
 </table>
