--- a/test-output/index.html
+++ b/test-output/index.html
@@ -51,7 +51,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Suite" class="navigator-link ">
-                    <span>C:\Users\VISHNU KOSANA\eclipse-workspace\Identify_New_Bikes\testng.xml</span>
+                    <span>C:\Users\2303727\eclipse-workspace\Identify_New_Bikes\testng.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -93,7 +93,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">3 methods,   3 passed</span>
+                    <span class="method-stats">1 method,   1 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -104,17 +104,7 @@
                     <div class="method-list-content passed suite-Suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Suite" title="com.IdentifyNewBikes.testRunner.testRun" class="method navigator-link" hash-for-method="runScenario(&quot;Navigating to the Upcoming Honda Bike tab&quot;, &quot;Identify New Bikes&quot;)">runScenario("Navigating to the Upcoming Honda Bike tab", "Identify New Bikes")</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
                         <a href="#" panel-name="suite-Suite" title="com.IdentifyNewBikes.testRunner.testRun" class="method navigator-link" hash-for-method="runScenario(&quot;login functionality&quot;, &quot;Identify New Bikes&quot;)">runScenario("login functionality", "Identify New Bikes")</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Suite" title="com.IdentifyNewBikes.testRunner.testRun" class="method navigator-link" hash-for-method="runScenario(&quot;Navigating to the Used Cars for Sale tab&quot;, &quot;Identify New Bikes&quot;)">runScenario("Navigating to the Used Cars for Sale tab", "Identify New Bikes")</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Suite -->
@@ -137,30 +127,10 @@
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="runScenario(&quot;Navigating to the Upcoming Honda Bike tab&quot;, &quot;Identify New Bikes&quot;)">
-                  </a> <!-- runScenario("Navigating to the Upcoming Honda Bike tab", "Identify New Bikes") -->
-                  <span class="method-name">runScenario</span>
-                  <span class="parameters">("Navigating to the Upcoming Honda Bike tab", "Identify New Bikes")</span>
-                  <em>
-(Runs Cucumber Scenarios)                  </em>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
                   <a name="runScenario(&quot;login functionality&quot;, &quot;Identify New Bikes&quot;)">
                   </a> <!-- runScenario("login functionality", "Identify New Bikes") -->
                   <span class="method-name">runScenario</span>
                   <span class="parameters">("login functionality", "Identify New Bikes")</span>
-                  <em>
-(Runs Cucumber Scenarios)                  </em>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="runScenario(&quot;Navigating to the Used Cars for Sale tab&quot;, &quot;Identify New Bikes&quot;)">
-                  </a> <!-- runScenario("Navigating to the Used Cars for Sale tab", "Identify New Bikes") -->
-                  <span class="method-name">runScenario</span>
-                  <span class="parameters">("Navigating to the Used Cars for Sale tab", "Identify New Bikes")</span>
                   <em>
 (Runs Cucumber Scenarios)                  </em>
                 </div> <!-- method-content -->
@@ -170,7 +140,7 @@
         </div> <!-- panel Suite -->
         <div panel-name="test-xml-Suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\VISHNU KOSANA\eclipse-workspace\Identify_New_Bikes\testng.xml</span>
+            <span class="header-content">C:\Users\2303727\eclipse-workspace\Identify_New_Bikes\testng.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -227,24 +197,16 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(3);
+data.addRows(1);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'runScenario')
 data.setCell(0, 2, 'com.IdentifyNewBikes.testRunner.testRun')
-data.setCell(0, 3, 417952);
-data.setCell(1, 0, 1)
-data.setCell(1, 1, 'runScenario')
-data.setCell(1, 2, 'com.IdentifyNewBikes.testRunner.testRun')
-data.setCell(1, 3, 17910);
-data.setCell(2, 0, 2)
-data.setCell(2, 1, 'runScenario')
-data.setCell(2, 2, 'com.IdentifyNewBikes.testRunner.testRun')
-data.setCell(2, 3, 16008);
+data.setCell(0, 3, 30605);
 window.suiteTableData['Suite']= { tableData: data, tableDiv: 'times-div-Suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 7 minutes</span>
+              <span class="suite-total-time">Total running time: 30 seconds</span>
               <div id="times-div-Suite">
               </div> <!-- times-div-Suite -->
             </div> <!-- times-div -->
@@ -272,24 +234,16 @@ return data;
             <div class="chronological-class">
               <div class="chronological-class-name">com.IdentifyNewBikes.testRunner.testRun</div> <!-- chronological-class-name -->
               <div class="configuration-class before">
-                <span class="method-name">setUpClass(org.testng.TestRunner@28d1d634)</span>
+                <span class="method-name">setUpClass(org.testng.TestRunner@39b85a73)</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-class before -->
               <div class="test-method">
-                <span class="method-name">runScenario("Navigating to the Upcoming Honda Bike tab", "Identify New Bikes")</span>
-                <span class="method-start">903 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">runScenario("Navigating to the Used Cars for Sale tab", "Identify New Bikes")</span>
-                <span class="method-start">18816 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
                 <span class="method-name">runScenario("login functionality", "Identify New Bikes")</span>
-                <span class="method-start">436768 ms</span>
+                <span class="method-start">3320 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-class after">
                 <span class="method-name">tearDownClass</span>
-                <span class="method-start">452776 ms</span>
+                <span class="method-start">33931 ms</span>
               </div> <!-- configuration-class after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
