--- a/test-output/index.html
+++ b/test-output/index.html
@@ -201,12 +201,12 @@ data.addRows(1);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'runScenario')
 data.setCell(0, 2, 'com.IdentifyNewBikes.testRunner.testRun')
-data.setCell(0, 3, 70175);
+data.setCell(0, 3, 40033);
 window.suiteTableData['Suite']= { tableData: data, tableDiv: 'times-div-Suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 1 minutes</span>
+              <span class="suite-total-time">Total running time: 40 seconds</span>
               <div id="times-div-Suite">
               </div> <!-- times-div-Suite -->
             </div> <!-- times-div -->
@@ -234,16 +234,16 @@ return data;
             <div class="chronological-class">
               <div class="chronological-class-name">com.IdentifyNewBikes.testRunner.testRun</div> <!-- chronological-class-name -->
               <div class="configuration-class before">
-                <span class="method-name">setUpClass(org.testng.TestRunner@5788722f)</span>
+                <span class="method-name">setUpClass(org.testng.TestRunner@773f3360)</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-class before -->
               <div class="test-method">
                 <span class="method-name">runScenario("login functionality", "Identify New Bikes")</span>
-                <span class="method-start">1462 ms</span>
+                <span class="method-start">3773 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-class after">
                 <span class="method-name">tearDownClass</span>
-                <span class="method-start">71643 ms</span>
+                <span class="method-start">43820 ms</span>
               </div> <!-- configuration-class after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
